test/bad/ban_latest_tag.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sBannedImageTags
metadata:
  name: ban-latest-tag
  labels:
    owner: william.hearn.canada.ca
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    tags:
      - "latest"
