test/bad/opa_limits_to_high.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa
  labels:
    owner: "william.hearn.canada.ca"
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          cpu: "300m"
          memory: "4000Mi"
