test/bad/opa_no_limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa
  labels:
    owner: "william.hearn.canada.ca"
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
