test/bad/opa_wrong_repositiory.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa
  labels:
    owner: "william.hearn.canada.ca"
spec:
  containers:
    - name: opa
      image: gcr.io/smythe-kpc/testbuilds/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
